--- a/CoPilot.html
+++ b/CoPilot.html
@@ -14,16 +14,12 @@
     </header>
     <main>
         <h2>List of Words</h2>
-        <ul>
-            <!-- Example entries -->
-            <li><a href="entries/word1.html">Word 1</a></li>
-            <li><a href="entries/word2.html">Word 2</a></li>
-            <li><a href="entries/word3.html">Word 3</a></li>
-            <!-- Add more entries as needed -->
+        <ul id="wordList">
+            <!-- The word list will be dynamically populated here -->
         </ul>
     </main>
 
-    <!-- Script.js -->
+    <!-- Link to the JavaScript file -->
     <script src="Script.js"></script>
 </body>
-  </html>
+</html>
