--- a/CoPilot.html
+++ b/CoPilot.html
@@ -21,5 +21,12 @@
 
     <!-- Link to the JavaScript file -->
     <script src="Script.js"></script>
+
+    <!-- Add a link to the Entry Template at the bottom -->
+    <footer>
+        <p>For the Entry Template, visit: 
+            <a href="https://github.com/NoviceWriter2003/Farhang-e-Mua-arifat-experimental-/blob/858173fb2a4ea4394e974ac212dc79ca9560b6a6/Entry-Template.html" target="_blank">Entry Template on GitHub</a>
+        </p>
+    </footer>
 </body>
 </html>
