--- a/CoPilot.html
+++ b/CoPilot.html
@@ -27,6 +27,11 @@
         <p>For the Entry Template, visit: 
             <a href="https://github.com/NoviceWriter2003/Farhang-e-Mua-arifat-experimental-/blob/858173fb2a4ea4394e974ac212dc79ca9560b6a6/Entry-Template.html" target="_blank">Entry Template on GitHub</a>
         </p>
+    
+     <p>For the Entry Template, visit: 
+            <a href=Entry-Template.html>Entry Template on GitHub</a>
+        </p>
+    
     </footer>
 </body>
 </html>
