--- a/Entry-Template.html
+++ b/Entry-Template.html
@@ -50,6 +50,14 @@
             font-size: 1.1em;
             margin-top: 20px;
         }
+
+        .entry-container .etymology {
+            font-size: 1.1em;
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #f4f8fc;
+            border-left: 5px solid #333;
+        }
     </style>
 </head>
 <body>
@@ -72,6 +80,11 @@
             <div class="word-info">
                 <h3>Part of Speech:</h3>
                 <p id="part-of-speech">Noun (or any other part of speech)</p>
+            </div>
+
+            <div class="etymology">
+                <h3>Etymology:</h3>
+                <p id="etymology-info">Origins and historical development of the word, including its linguistic roots.</p>
             </div>
 
             <div class="example-sentence">
