--- a/Entry-Template.html
+++ b/Entry-Template.html
@@ -70,16 +70,17 @@
             <h2>Word: <span id="word-name">Example Word</span></h2>
 
             <div class="word-info">
-                <h3>English:</h3>
-                <p id="english-definition">Definition of the word in English.</p>
-
-                <h3>Urdu:</h3>
-                <p id="urdu-definition">اردو میں لفظ کی تعریف</p>
-            </div>
-
-            <div class="word-info">
-                <h3>Part of Speech:</h3>
-                <p id="part-of-speech">Noun (or any other part of speech)</p>
+                <h3>Definition:</h3>
+                <ul id="definitions">
+                    <li>
+                        <p><strong>English:</strong> Definition of the word in English.</p>
+                        <p><strong>Part of Speech:</strong> Noun (or any other part of speech)</p>
+                    </li>
+                    <li>
+                        <p><strong>Urdu:</strong> اردو میں لفظ کی تعریف</p>
+                        <p><strong>Part of Speech:</strong> اسم (یا کوئی اور)</p>
+                    </li>
+                </ul>
             </div>
 
             <div class="etymology">
