--- a/CoPilot.html
+++ b/CoPilot.html
@@ -26,7 +26,11 @@
     <footer>
       <p>For the Entry Template, visit: 
             <a href=Entry-Template.html>Entry Template on GitHub</a>
-        </p>
+      </p>
+        <p>For the Comic, visit: 
+            <a href=Entries/Comic.html>Comic on GitHub</a>
+      </p>
+       
     </footer>
 </body>
 </html>
