--- a/CoPilot.html
+++ b/CoPilot.html
@@ -24,13 +24,12 @@
 
     <!-- Add a link to the Entry Template at the bottom -->
     <footer>
-      <p>For the Entry Template, visit: 
-            <a href=Entry-Template.html>Entry Template on GitHub</a>
-      </p>
+        <p>For the Entry Template, visit: 
+            <a href="Entry-Template.html">Entry Template on GitHub</a>
+        </p>
         <p>For the Comic, visit: 
-            <a href=Entries/Comic.html>Comic on GitHub</a>
-      </p>
-       
+            <a href="Entries/Comic.html">Comic on GitHub</a>
+        </p>
     </footer>
 </body>
 </html>
