--- a/CoPilot.html
+++ b/CoPilot.html
@@ -24,7 +24,7 @@
 
     <!-- Add a link to the Entry Template at the bottom -->
     <footer>
-        <p>For the Entry Template, visit: 
+        <p>For our Entry Template, visit: 
             <a href="Entry-Template.html">Entry Template on GitHub</a>
         </p>
         <p>For the Comic, visit: 
